--- a/pizza.html
+++ b/pizza.html
@@ -21,19 +21,29 @@
                 <li><a href="#">Offer's</a></li>
                 <li><a href="#">Your Order</a></li>
                 <li><a href="#">Delivery</a></li>
-                <li id="cart"><a href="#">Cart</a></li>
+                <li><button type="button" class="cart">Cart</button></a></li>
             </ul>
         </nav>
+
+        <div class="container">
+            <div class="pic"></div>
+        </div>
 
         <section class="content">
             <p>Free Home Delivery</p>
             <h1 id="quality">Quality F<span>oo</span>ds</h1>
             <h1 id="week">Pizza of the week</h1>
 
-            <div class="button">
-                <button type="button" id="but">Order Now!!</button>
-                <button type="button" id="ton">25% Off Hurry!!</button>
+            <div class="btn">
+                <button type="button" class="but">Order Now!!</button>
+                <button type="button" class="ton">25% Off Hurry!!</button>
             </div>
+
+            <!-- <div class="main">
+                <div class="img">
+                    <img src="images/pizza3.png" alt="no pic">
+                </div>
+            </div> -->
         </section>
 
         
